# katas

./: CMakeLists.txt  README.MD  README.md  array_or_list.cpp  basic_string_ex.cpp  bubble.cpp  db1  main.cpp  multimaps.cpp  my_next_permutation.cpp  op_eq_cases.cpp  skyline_pseudocode.txt  swaps_cpp03.cpp  tree_is_balanced.cpp  virtuals_behavior_in_ctor_and_dtor.cpp
Complejo/: README.MD  complejo.h  main.cpp
HivePtr/: HivePtr.h  README.MD  main.cpp
YX/: find_unordered_yx2.cpp  median_yx1.cpp  partition.cpp  rotate.cpp  rotate_reverse.cpp  shuffle.cpp  square_equation_yx3.cpp
codemaster/: CMakeLists.txt  main.cpp
db_adapter/: db_adapter.cpp
db_cache/: .gitignore  CMakeLists.txt  README.md  db1  input.txt  input2.txt  input3.txt  kata.txt  main.cpp  output.txt
db_cache/db_adapter/: db_adapter.cpp  db_adapter.h
db_cache/db_cache/: db_cache.cpp  db_cache.h
db_cache/quote_genr/: quote_genr.cpp  quote_genr.h
from_yandex/: matrix.cpp  rotate_copy.cpp  substring.cpp  three_arrays.cpp
initi/: CMakeLists.txt  main.cpp
rooks/: CMakeLists.txt  main.cpp
